--- a/references.bib
+++ b/references.bib
@@ -7,8 +7,15 @@
 }
 
 @misc{backgroundreport,
-  author       = {Brianna Cathey and Nam Tran}, 
+  author       = {Brianna Cathey and Nam Tran and Cooper Pearson and Richie Beck and Marcel Isper}, 
   title        = {Background, Vision, and Needs},
+  institution  = {The George Washington University},
+  year         = {2018}
+}
+
+@misc{sprintlog,
+  author       = {Brianna Cathey and Nam Tran and Cooper Pearson and Richie Beck and Marcel Isper}, 
+  title        = {Balloon Catheterization Sprint Log},
   institution  = {The George Washington University},
   year         = {2018}
 }
